# univalidator

./: LICENSE  README.md  pyproject.toml
src/pyemail_validator/abstractions/: __init__.py  _base_email_validator.py  _base_validator.py
src/pyemail_validator/services/: _validator_service.py
src/pyemail_validator/validators/: __init__.py  _mx_email_record_validator.py  _regex_email_validator.py  _regex_validator.py
src/univalidator/: __init__.py
src/univalidator/abstractions/: __init__.py  _base_composite_validator.py  _base_validator.py
src/univalidator/composites/: __init__.py  _composite_validator.py
src/univalidator/services/: __init__.py  _validator_service.py
src/univalidator/validators/: __init__.py  _mx_email_record_validator.py  _regex_email_validator.py  _regex_validator.py
tests/: conftest.py
tests/composites/: test_validator_service.py
tests/validators/: test_mx_email_record_validator.py  test_regex_email_validator.py  test_regex_validator.py
