[project]
name = "pyemail-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shaileshpandit141", email = "shaileshpandit141@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pyemail-validator = "pyemail_validator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
